# chatty

./: .clangd  .editorconfig  CHANGELOG.md  CMakeLists.txt  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
cmake/: version.hpp.in
src/: ask.hpp  briefs_loader.hpp  chatty.cpp  chatty.hpp  config.cpp  config.hpp  env.cpp  env.hpp  environment.hpp  exec.hpp  file_read.hpp  file_write.hpp  main.cpp  mcp_loader.hpp  paths.cpp  paths.hpp  prompt.hpp  session_manager.cpp  session_manager.hpp  settings.cpp  settings.hpp  shell.hpp  spawn.hpp  tools.hpp  web_extract.hpp  web_search.hpp
